# automation

./: .babelrc  .env~sample  .eslintrc.js  .gitignore  .snyk  Cargo.toml  LICENSE  README.md  circle.yml  jsdoc.json  justfile  package-lock.json  package.json  persistedMemoize.js  samconfig.toml  serverless.yml  template.yaml  uploadImagesToCloudinary.js  vitest.config.ts  webpack.config.babel.js  webpack.config.js
.circleci/: config.yml
.github/workflows/: test.yml
functions/create-issue/: Cargo.toml  README.md  extraContent.js  handler.js  mailchimpCampaign.js  package-lock.json  package.json  template.js
functions/create-issue/__tests__/: getLinkLabelBasedOnUrl.js  template.js  test-event.json
functions/create-issue/best-scheduled-tweets/: addCanonicalUrls.js  fallbackImage.js  index.js  keepMinimalData.js  removeBlacklistedUrls.js  retrieveMetadata.js  takeN.js  unique.js
functions/create-issue/src/: buttondown.rs  datetime_utils.rs  main.rs  model.rs  template.rs
functions/create-issue/template/: newsletter.njk
functions/create-issue/templates/: book.njk  book_buy_link.njk  book_content.njk  book_image.njk  book_title.njk  extra_content.njk  intro.njk  link.njk  link_content.njk  link_primary_image.njk  link_primary_title.njk  link_secondary_title.njk  newsletter.md  newsletter.njk  quote.njk  sponsor_banner.njk
functions/create-issuev2/: Cargo.toml
functions/create-issuev2/events/: issue-435.json
functions/create-issuev2/src/: buttondown.rs  datetime_utils.rs  event_handler.rs  main.rs  model.rs  template.rs
functions/create-issuev2/templates/: newsletter.md
functions/fetch-book/: Cargo.toml  handler.js  package-lock.json  package.json
functions/fetch-book/events/: example.json
functions/fetch-book/src/: main.rs
functions/fetch-issue-number/: Cargo.toml
functions/fetch-issue-number/src/: fetcher.rs  main.rs
functions/fetch-issue-number/src/fixtures/: archive.html
functions/fetch-links/: addCampaignUrls.js  blacklistManager.js  handler.js  package-lock.json  package.json  persistedMemoize.js  uploadImagesToCloudinary.js
functions/fetch-links/__tests__/: addCampaignUrls.js
functions/fetch-links/best-scheduled-tweets/: addImageUrls.js  calculateUrlsScore.js  extractLinks.js  getLastMastodonStatuses.js  index.js  removeInvalid.js  removeLinksWithoutTitleOrDescription.js  retrieveMetadata.js  takeOnesAfterReferenceMoment.js
functions/fetch-links/events/: event.json
functions/fetch-quote/: Cargo.toml  handler.js  package-lock.json  package.json
functions/fetch-quote/src/: fetcher.rs  main.rs  models.rs
functions/fetch-sponsor/: Cargo.toml
functions/fetch-sponsor/src/: main.rs
scripts/: build.sh
shared/: Cargo.toml
shared/src/: lib.rs
src/: addCampaignUrls.js  blacklistManager.js  getLinkLabelBasedOnUrl.js  handler.js  mailchimpCampaign.js  persistedMemoize.js  uploadImagesToCloudinary.js
src/__tests__/: addCampaignUrls.js  getLinkLabelBasedOnUrl.js
src/best-scheduled-tweets/: addCanonicalUrls.js  addImageUrls.js  extractLinks.js  getLastTweets.js  getUrlsInfo.js  index.js  normalizeUrls.js  retrieveMetadata.js  sortByScore.js  takeOnesAfterReferenceMoment.js  uniqueBy.js  unshortenLinks.js
src/best-scheduled-tweets/__tests__/: addCanonicalUrls.js  addImageUrls.js  (+16 more)
statemachine/: create_issue.asl.yaml
templates/: mailchimp.html
test/: addCampaignUrls.test.js  getLinkLabelBasedOnUrl.test.js  sampleTest.test.js
(+25 files in other folders)
