[package]
name = "create-issuev2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# HTTP requests (with rustls for Lambda compatibility)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Template engine
tera = "1"

# Environment variables and error handling
anyhow = "1"
