[package]
name = "fetch-book"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_runtime = "0.10.0"
reqwest = { version = "0.12.0", default-features = false, features = [
  "rustls-tls",
  "json",
  "http2",
] }
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1", features = ["macros"] }
shared = { path = "../../shared" }
