[package]
name = "fetch-issue-number"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_runtime = "0.10.0"
nom = "7.1.3"
reqwest = { version = "0.11.18", features = [
  "rustls-tls",
], default-features = false }
scraper = "0.17.1"
serde = "1.0.175"
serde_json = "1.0.103"
thiserror = "1.0.44"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }

[dev-dependencies]
httpmock = "0.6.8"
